--- a/mail/themes/pinstripe/mail/mailWindow1.css
+++ b/mail/themes/pinstripe/mail/mailWindow1.css
@@ -62,10 +62,6 @@ treechildren::-moz-tree-twisty {
 
 /* :::::::::::::::::::::::::::::::::::: */
 
-#mail-toolbox {
-
-}
-
 #folderPaneBox {
   border-right: 1px solid #8B8B8B;
   -moz-margin-end: -3px !important;
